--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,6 @@
         }
     ],
     "license": "MIT",  
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require": {}
 }
