--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,17 @@
 {
     "name": "zarenta/phonepe",
-    "description": "Laravel PhonePe Package",
-    "type": "composer-plugin",
+    "description": "A Laravel package for PhonePe payment integration.",
+    "type": "library",
+    "require": {
+        "php": "^8.2",
+        "guzzlehttp/guzzle": "^7.0"
+    },
     "autoload": {
         "psr-4": {
-            "Phonepe\\": "src/"
+            "PhonePe\\": "src/"
         }
     },
-    "authors": [
-        {
-            "name": "Zarenta IT Solutions"
-        }
-    ],
-    "license": "MIT",  
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "require": {}
+    "license": "MIT",
+    "minimum-stability": "stable",
+    "prefer-stable": true
 }
