--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,6 @@
         }
     },
     "license": "MIT",
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
