--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,18 @@
 {
     "name": "zarenta/phonepe",
-    "description": "A Laravel package for PhonePe payment integration.",
-    "type": "library",
-    "require": {
-        "php": "^8.2",
-        "guzzlehttp/guzzle": "^7.0"
-    },
+    "description": "A Laravel Package to Pay With PhonePe Gateway",
+    "type": "composer-plugin",
+    "license": "MIT",
     "autoload": {
         "psr-4": {
-            "PhonePe\\": "src/"
+            "Phonepe\\": "src/"
         }
     },
-    "license": "MIT",
+    "authors": [
+        {
+            "name": "Zarenta IT Solutions"
+        }
+    ],
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "require": {}
 }
